@@ -123,7 +123,8 @@ static EditorFuncs editor_funcs = {
 	&editor_get_eol_char_len,
 	&editor_get_eol_char,
 	&editor_insert_text_block,
-	&editor_get_eol_char_mode
+	&editor_get_eol_char_mode,
+	&editor_goto_pos
 };
 
 static ScintillaFuncs scintilla_funcs = {
