@@ -6,6 +6,9 @@
    Rewrite the logic to auto detect encodings a bit to make it more
    readable and fix a slightly wrong detection on Windows
    (closes #3019573).
+ * plugins/geanyfunctions.h, src/editor.c, src/plugindata.h,
+   src/plugins.c:
+   Add editor_goto_pos() to the plugin API.
 
 
 2010-08-13  Nick Treleaven  <nick(dot)treleaven(at)btinternet(dot)com>
